--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,10 @@
-<form action="/new_user_path" method="get">
+<form accept-charset="UTF-8" action="/users" method="post">
   <label for="name">Name:</label>
   <input type="text" id="name" name="name"><br><br>
-  <label for="lname">Email:</label>
+  <label for="email">Email:</label>
   <input type="email" id="email" name="email"><br><br>
    <label for="password">Password:</label>
   <input type="password" id="password" name="password"><br><br>
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
   <input type="submit" value="Submit">
 </form>
