--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,7 +30,7 @@
 </p>
   <p>
   <%= f.label :password %><br />
-  <%= f.text_field :password, placeholder: "Feed me your password"%>
+  <%= f.password_field :password, placeholder: "Feed me your password"%>
 </p>
   <p>
     <%= f.submit %>
